name: hstradeking
version: 0.1.0
cabal-version: >=1.8
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Tradeking API bindings for Haskell
description:
    This is a Haskell binding for the TradeKing developers API (https://developers.tradeking.com/).
    .
    It currently supports retrieving quotes and stock information, as well as the quote and trade
    streaming API.
    .
    Support for the other TradeKing API endpoints is forthcoming.
    .
    To use, install the package via cabal. This will create an executable called `tradeking`. To
    connect to the TradeKing API, you will need to create a new personal application from the
    TradeKing developers site. This should give you four strings: an OAuth consumer key, an OAuth
    consumer secret, an OAuth Token, and an OAuth Token Secret. You supply these into the
    `tradeking` application using a configuration file (either `$(HOME)/.tradeking` or
    `/etc/tradeking.conf`). This configuration file should look like:
    .
    > consumer-key = <tradeking consumer key>
    > consumer-secret = <tradeking consumer secret>
    > oauth-token = <tradeking oauth token>
    > oauth-token-secret = <tradeking oauth token secret>
    .
    Now you can run `tradeking quote SPY` to have it return the current quote for the S&P 500
    ETF. `tradeking info MSFT` will provide information on Microsoft, and `tradeking stream MSFT`
    will provide a live stream of `MSFT` quotes. All commands accept more than one stock, so
    `tradeking quote MSFT AAPL`, `tradeking info MSFT SPY`, and `tradeking stream SPY AAPL` work as
    expected (subject to TradeKing) limits.
    .
    You can also request quotes programmatically, using the API described here.

data-dir: ""
extra-source-files:
   client/Client/Quote.hs

library
    build-depends: base -any, hoauth -any, text -any, containers -any, time -any, numbers -any, aeson -any,
                   bytestring -any, vector -any, old-locale -any, safe -any, conduit -any, http-conduit -any, resourcet -any,
                   RSA <=1.2.2.0, case-insensitive -any, lifted-base -any
    exposed-modules: Finance.TradeKing Finance.TradeKing.Quotes Finance.TradeKing.Types
                     Finance.TradeKing.Service
    hs-source-dirs: src
    ghc-options: -O2

executable tradeking
    build-depends: hstradeking ==0.1.0, base -any, configurator -any, old-locale -any, safe -any, time -any,
                   numbers -any, aeson -any, bytestring -any, vector -any, containers -any, text -any,
                   hoauth -any, conduit -any, http-conduit -any, resourcet -any, RSA <=1.2.2.0, transformers -any
    main-is: Client.hs
    hs-source-dirs: client
    ghc-options: -O2

source-repository head
    type:     git
    location: git://github.com/tathougies/hstradeking.git