name: hstradeking
version: 0.1.0.1
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
synopsis: Tradeking API bindings for Haskell
description:
    This is a Haskell binding for the TradeKing developers API (https://developers.tradeking.com/).
    .
    It currently supports retrieving quotes and stock information, as well as the quote and trade
    streaming API.
    .
    Support for the other TradeKing API endpoints is forthcoming.
    .
    To use, install the package via cabal. This will create an executable called `tradeking`. To
    connect to the TradeKing API, you will need to create a new personal application from the
    TradeKing developers site. This should give you four strings: an OAuth consumer key, an OAuth
    consumer secret, an OAuth Token, and an OAuth Token Secret. You supply these into the
    `tradeking` application using a configuration file (either `$(HOME)/.tradeking` or
    `/etc/tradeking.conf`). This configuration file should look like:
    .
    > consumer-key = <tradeking consumer key>
    > consumer-secret = <tradeking consumer secret>
    > oauth-token = <tradeking oauth token>
    > oauth-token-secret = <tradeking oauth token secret>
    .
    Now you can run `tradeking quote SPY` to have it return the current quote for the S&P 500
    ETF. `tradeking info MSFT` will provide information on Microsoft, and `tradeking stream MSFT`
    will provide a live stream of `MSFT` quotes. All commands accept more than one stock, so
    `tradeking quote MSFT AAPL`, `tradeking info MSFT SPY`, and `tradeking stream SPY AAPL` work as
    expected (subject to TradeKing) limits.
    .
    You can also request quotes programmatically, using the API described here.

data-dir: ""
category: Finance
maintainer: Travis Athougies <travis@athougies.net>
extra-source-files:
   client/Client/Quote.hs

library
    build-depends: base >= 4 && < 5, hoauth >=0.3.5, text >=1.2.2, bytestring >=0.10.6, containers >=0.4.2.1,
                   aeson >=0.10, old-locale >=1.0.0.4, safe >=0.3.9, conduit >=1.2.6.1, http-conduit >=2.1.8,
                   resourcet >=1.1.7, RSA <=1.2.2.0, case-insensitive >=1.2.0.5, lifted-base >=0.2.3.6,
                   configurator >=0.3, vector >=0.11, time >=1.4, numbers >=3000.2.0.1
    exposed-modules: Finance.TradeKing Finance.TradeKing.Quotes Finance.TradeKing.Types
                     Finance.TradeKing.Service Finance.TradeKing.Config
    hs-source-dirs: src

executable tradeking
    build-depends: hstradeking ==0.1.0.1, base >= 4 && < 5, conduit >=1.2.6.1,
                   bytestring >=0.10.6, resourcet >=1.1.7, transformers >=0.4.3,
                   conduit-extra >=1.1.9.2
    main-is: Client.hs
    hs-source-dirs: client

source-repository head
    type:     git
    location: git://github.com/tathougies/hstradeking.git
